--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,4 +1,6 @@
 <style>
+	body{background:#333}
+	#main {background:#fff}
 	.masthead, .sidebar {display:none}
 </style>
 <div style='display:none'>
