--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,7 +1,7 @@
 <style>
 	.page{width:auto}
 	body{background:#333}
-	#main {border-radius:15px;display: table-cell;width: 700px;box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.7);background:#fff}
+	#main {border-radius:15px;box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.7);background:#fff}
 	.masthead, .sidebar, #footer {display:none}
 </style>
 <div style='display:none'>
