--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,7 +2,7 @@
 	.page{width:auto}
 	body{background:#333}
 	#main {border-radius:15px;box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.7);background:#fff}
-	.masthead, .sidebar, #footer {display:none}
+	.masthead, .sidebar, #footer ,.page__related {display:none}
 </style>
 <div style='display:none'>
 <div id="realssp_fluke10300014_24583" class="realssp_dv" data-mcode="Zmx1a2UxMDMwMDAxNF8yNDU4Mw==" title="리얼클릭 배너광고"></div><script src="//ssp.realclick.co.kr/realclickssp.js?v=1.0&m=fluke10300014_24583&t=j" async></script>
