--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,6 @@
 <style>
 	.page{width:auto}
-	body{background:#333}
+	body{background:#eee}
 	#main {border-radius:15px;box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.7);background:#fff}
 	.masthead, .sidebar, #footer ,.page__related {display:none}
 </style>
