--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 <style>
-	.page{}
+	.page{width:auto}
 	body{background:#eee;margin: 0 auto}
 	#main {border-radius:15px;box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.7);background:#fff;margin:5px}
 	.masthead, .sidebar, #footer ,.page__related {display:none}
