--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,6 @@
 <style>
-	body{background:#eee;text-align:middle}
-	#main {border-radius:15px;box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.7);background:#fff;margin:5px}
+	body{background:#eee}
+	#main {display: table;margin: 0 auto;border-radius:15px;box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.7);background:#fff;margin:10px}
 	.masthead, .sidebar, #footer ,.page__related {display:none}
 </style>
 <div style='display:none'>
