--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,6 @@
 <style>
-	body{background:#333}
-	initial-content{display: table;margin:0 auto}
+	body{display: table;margin:0 auto;background:#eee}
+	initial-content{}
 	.page {width:auto;padding:0}
 	#main {border-radius:15px;box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.7);background:#fff;margin:10px}
 	.masthead, .sidebar, #footer ,.page__related {display:none}
