--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 <style>
-	body{background:#eee}
+	body{background:red}
 	masthead{display: table;margin:0 auto}
 	initial-content{display: table;margin:0 auto}
 	.page {width:auto;padding:0}
