--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,7 +1,5 @@
 <style>
-	body{background:red}
-	masthead{display: table;margin:0 auto}
-	initial-content{display: table;margin:0 auto}
+	body{background:#eee}
 	.page {width:auto;padding:0}
 	#main {border-radius:15px;box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.7);background:#fff;margin:10px}
 	.masthead, .sidebar, #footer ,.page__related {display:none}
