--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 <style>
-        .masthead {background:#eee}
+        .masthead, #site-nav {background:#eee}
 </style>
 <div style='display:none'>
 <div id="realssp_fluke10300014_24583" class="realssp_dv" data-mcode="Zmx1a2UxMDMwMDAxNF8yNDU4Mw==" title="리얼클릭 배너광고"></div><script src="//ssp.realclick.co.kr/realclickssp.js?v=1.0&m=fluke10300014_24583&t=j" async></script>
