--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,4 +1,5 @@
 <style>
+	.author__avatar {width:auto;height:auto}
         .masthead, #site-nav {background:#f2f3f3}
 </style>
 <div style='display:none'>
