--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,10 @@
 <style>
 	.author__avatar {width:auto;height:auto}
         .masthead, #site-nav {background:#f2f3f3}
+#element{display:none}
+@media (max-width:1024px) {
+#element{display:block}
+	}
 </style>
 <div style='display:none'>
 <div id="realssp_fluke10300014_24583" class="realssp_dv" data-mcode="Zmx1a2UxMDMwMDAxNF8yNDU4Mw==" title="리얼클릭 배너광고"></div><script src="//ssp.realclick.co.kr/realclickssp.js?v=1.0&m=fluke10300014_24583&t=j" async></script>
