--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,4 +1,5 @@
 <style>
+	a {color:#3a81ff}
 	.author__avatar {width:auto;height:auto}
         .masthead, #site-nav {background:#f2f3f3}
 #element{display:none}
