--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,12 +1,18 @@
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<link rel="shortcut icon" href="https://blogest.github.io/favicon.ico">
+<link rel="sitemap" type="application/rss+xml" href="" />
+
 <style>
-	a {color:#3a81ff}
+	h1, h2, h3, h4, h5, h6 {margin:5px}
 	.author__avatar {width:auto;height:auto}
         .masthead, #site-nav {background:#f2f3f3}
-#element{display:none}
+.archive__item-excerpt, #element{display:none}
 @media (max-width:1024px) {
 #element{display:block}
 	}
 </style>
+
 <div style='display:none'>
 <div id="realssp_fluke10300014_24583" class="realssp_dv" data-mcode="Zmx1a2UxMDMwMDAxNF8yNDU4Mw==" title="리얼클릭 배너광고"></div><script src="//ssp.realclick.co.kr/realclickssp.js?v=1.0&m=fluke10300014_24583&t=j" async></script>
 <div id="realssp_fluke10300014_24582" class="realssp_dv" data-mcode="Zmx1a2UxMDMwMDAxNF8yNDU4Mg==" title="리얼클릭 배너광고"></div><script src="//ssp.realclick.co.kr/realclickssp.js?v=1.0&m=fluke10300014_24582&t=j" async></script>
@@ -14,13 +20,17 @@
 
 <!--배너-->
  <style>
- 	#elementt, #element {z-index:999;position: fixed;left: 50%;top:100px;margin-left: -175px
-}
+	#element {z-index:999;position: fixed;left: 50%;top:100px;margin-left: -175px}
  </style>
 <div id="element">
-	<button type="button" style='position:relative;outline:0;line-height:15px;width:15px;background:#000; border:0;color:#fff;top:30px;left:15px' onclick="someFunction()">X</button>
-<div id="realssp_fluke10300014_32778" class="realssp_dv" data-mcode="Zmx1a2UxMDMwMDAxNF8zMjc3OA==" title="리얼클릭 배너광고"></div><script rel="preload" src="//ssp.realclick.co.kr/realclickssp.js?v=1.0&m=fluke10300014_32778&t=j" async></script>
-</div> 
+<button type="button" style='position:relative;outline:0;line-height:15px;width:15px;background:#000; border:0;color:#fff;top:30px;left:15px' onclick="someFunction()">X</button>
+<script type="text/javascript" >
+	if (/android|webos|iphone|ipad|ipod|blackberry|windows phone/i.test(navigator.userAgent))
+	{(function(){document.writeln(' <div id="realssp_fluke10300014_32778" class="realssp_dv" data-mcode="Zmx1a2UxMDMwMDAxNF8zMjc3OA==" title="리얼클릭 배너광고"></div> ');})();}
+	else{(function(){document.writeln(' ');})();}
+</script>
+<script rel="preload" src="//ssp.realclick.co.kr/realclickssp.js?v=1.0&m=fluke10300014_32778&t=j" async></script>
+</div>
 <script type="text/javascript">
 var clicks = 0; 
 var el = document.getElementById("element");
